# yp-scraper

./: LICENSE  README.md  pyproject.toml
yp_scraper/: scraper.py
